# Konnect

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DEV.md  README.md  ROADMAP.md  docker-compose.yml  tool-directory.md
.github/workflows/: ci.yml  e2e-kicad.yml  linux-ci.yml  release.yml
crates/konnect/: Cargo.toml
crates/konnect-core/: Cargo.toml
crates/konnect-ipc/: Cargo.toml  build.rs
crates/konnect-ipc/src/: client.rs  lib.rs  transform.rs  types.rs
crates/konnect-ipc/tests/: footprint_transform_test.rs  live_kicad_test.rs  mock_server_test.rs
crates/konnect-ipc/tests/fixtures/: live_ipc.kicad_pcb
crates/konnect-schematic-editor/: Cargo.toml
crates/konnect-schematic-editor/src/: error.rs  lib.rs  library.rs
crates/konnect-schematic-editor/src/schematic/: mod.rs  sheet.rs  symbol.rs
crates/konnect-schematic-editor/tests/: integration.rs
crates/konnect-sexp/: Cargo.toml
crates/konnect-sexp/src/: geometry.rs
crates/konnect-sexp/tests/: proptest_parser.rs
crates/konnect/assets/agents/: kicad-design-review-agent.md  kicad-schematic-build-agent.md
crates/konnect/assets/skills/kicad-library/: SKILL.md
crates/konnect/assets/skills/kicad-manufacture/: SKILL.md
crates/konnect/assets/skills/kicad-manufacture/references/: gerber-layers.md  jlcpcb-rules.md
crates/konnect/assets/skills/kicad-pcb/: SKILL.md
crates/konnect/assets/skills/kicad-pcb/references/: design-rules.md  trace-width-table.md
crates/konnect/assets/skills/kicad-review/: SKILL.md
crates/konnect/assets/skills/kicad-review/references/: design-checklist.md  error-taxonomy.md
crates/konnect/assets/skills/kicad-schematic/: SKILL.md
crates/konnect/assets/skills/kicad-schematic/references/: wiring-patterns.md
crates/konnect/assets/skills/konnect/: SKILL.md
crates/konnect/src/: config.rs  ffi.rs  install.rs  lib.rs  main.rs  manifest.rs
crates/konnect/src/transport/: http.rs
crates/konnect/tests/: e2e_kicad.rs  live_kicad_tools.rs
crates/schematic-viewer/: Cargo.toml  tauri.conf.json
docs/: LINUX.md  TROUBLESHOOTING.md
examples/: mcp.linux.example.json
packaging/: build-pcm.ps1  build-pcm.sh  check-linux-compat.sh  metadata.json  smoke-test-kicad-python-plugin.py  validate-pcm.py
plugin/: __init__.py  plugin.json  settings_dialog.py
(+22 files in other folders)
