[package]
name = "konnect-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# NNG + Protobuf for KiCAD 10 IPC API
nng.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
konnect-sexp = { path = "../konnect-sexp" }
