[package]
name = "konnect-schematic-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Typed KiCAD schematic parser and manipulator with lossless round-trips"

[dependencies]
thiserror.workspace = true
dirs.workspace = true
uuid.workspace = true
konnect-sexp.workspace = true  # For geometry (pin transforms, snap, T-junction detection)

[dev-dependencies]
tempfile = "3"
