[package]
name = "konnect-sexp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nom.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
