[package]
name = "konnect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# Compile as both a binary (standalone MCP server) and a cdylib (KiCAD plugin)
[[bin]]
name = "konnect"
path = "src/main.rs"

[lib]
name = "konnect_plugin"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
konnect-core.workspace = true
konnect-sexp.workspace = true
konnect-ipc.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
dirs.workspace = true

[build-dependencies]
